Edit index.html and bat-truffles.html

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <nav class="navbar">
                 <section class="container">
                     <div class="logo"><a href="../index.html" class="logos">
-                        <img class="ghost" src="../images/cauldron.png" alt="ghost">
+                        <img class="ghost" src="./images/cauldron.png" alt="ghost">
                     </a></div>
                     <ul class="nav">
                         <li class="nav__item"><a href="#">Home</a></li>
