Edit index.html logo link

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <header class="header">
             <nav class="navbar">
                 <section class="container">
-                    <div class="logo"><a href="../index.html" class="logos">
+                    <div class="logo"><a href="index.html" class="logos">
                         <img class="ghost" src="./images/cauldron.png" alt="ghost">
                     </a></div>
                     <ul class="nav">
