Add main image to index.html

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div class="container row">
                 <div class="halloween-recipes__text">
                     <h1 class="hreci">Halloween Recipes</h1>
-                    <img class="halloweenPic" src="images/halloween picture.webp" alt="Halloween themed food">
+                    <img class="halloweenPic" src="./images/halloweenpicture.webp" alt="Halloween themed food">
                     <p class="subthree">Here are some spooktacular recipes</p>
                 </div>
             </div>
