Edit bat-truffles.html h1

--- a/recipes/bat-truffles.html
+++ b/recipes/bat-truffles.html
@@ -37,7 +37,7 @@
         <section class="halloween-recipes">
             <div class="container row">
                 <div class="halloween-recipes__text-two">
-                    <h1 class="batty tart">Boarded-Up Window Caramel Tart</h1>
+                    <h1 class="batty tart">Brownie Bat Truffles</h1>
                     <img class="nut-tart" src="https://hips.hearstapps.com/del.h-cdn.co/assets/15/39/2048x1365/gallery-1442865990-10-bat-img-9049.jpg?resize=768:*">
                     
                 </div>
